--- a/src/flightmodel/CMakeLists.txt
+++ b/src/flightmodel/CMakeLists.txt
@@ -4,6 +4,5 @@ target_include_directories(flyingwing PUBLIC ${CMAKE_CURRENT_LIST_DIR})
 target_link_libraries(flyingwing
     pico_stdlib 
     pico_multicore
-    hardware_uart
-    hardware_pio
+    hardware_timer
 )
