update flight model

--- a/lib/picoservo/CMakeLists.txt
+++ b/lib/picoservo/CMakeLists.txt
@@ -2,8 +2,7 @@
 add_library(picoservo
 	src/pico_servo.c
 )
-
-target_include_directories(picoservo STATIC include)
+target_include_directories(picoservo PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
 
 # Pull in our pico_stdlib which pulls in commonly used features
 target_link_libraries(picoservo pico_stdlib hardware_pwm)
